--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "html2pdf.js": "^0.11.2",
     "lucide-react": "^0.541.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
