--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,33 @@
-# OS / IDEs
-.DS_Store
-.idea/
-.vscode/
-*.iml
+# Node / Vite
+frontend/node_modules/
+frontend/dist/
 
-# Node (frontend)
-node_modules/
-dist/
-build/
-npm-debug.log*
-yarn-error.log*
+# Python
+**/__pycache__/
+*.py[cod]
 
-# Java (backend)
-target/
-build/
-.gradle/
-.out/
+# IDE/editors
+.vscode/      # VS Code
+.idea/        # JetBrains (PyCharm, WebStorm)
 
-# Python (if any tooling/scripts)
-__pycache__/
+# Local data & logs
+chroma_db/
+backend/chroma_db/
+backend/uploads/
+backend/uploads_staged/
+backend/logs/
+backend/eval/**/outputs/
+*.log
+backend/**/__pycache__/
 *.pyc
-.venv/
-venv/
-.mypy_cache/
-.pytest_cache/
 
-# Env & secrets
+# Env files (keep only *.example in Git)
 .env
-.env.*
-*.local
-*.secret
-secrets/*.json
+*.env
+backend/.env
+frontend/.env
+frontend/.env.*.local
 
-# Docker
-**/docker/*.log
-**/docker/*.tmp
-
-# Others
-coverage/
-logs/
+# Ad-hoc debug snapshots
+project_tree.txt
+backend/backend.txt
